landing page improvements

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,4 +6,5 @@
         {% endfor %}
       </div>
     </div>
-  </footer>
+  <div class="row small text-muted">Theme adapted from <a href="https://github.com/LeNPaul/academic">Jekyll Academic</a></div>
+</footer>
