--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,23 +1,15 @@
-<header class="d-flex flex-column align-items-center pb-3 mb-5 border-bottom">
-    {% if page.header%}
-        <div role="banner">
-            <a href="{{ site.baseurl }}"><img src="{{ site.baseurl }}/{{ page.header }}" alt="{{ site.title }} banner image" title="{{ site.title }} banner image" class="img-fluid"></a>
-        </div>
-
-    {% elsif site.header %}
-
-        <div role="banner">
-            <a href="{{ site.baseurl }}"><img src="{{ site.baseurl }}/{{ site.header }}" title="{{ site.title }} banner image" class="img-fluid"></a>
-        </div>
-  
-    {% else %}
-
-    {% endif %}
+<header class="d-flex flex-column flex-md-row align-items-center pb-3 mb-5 border-bottom">
     <div>
-        <a href="{{ site.github.url }}/" class="d-flex align-items-center text-decoration-none">
-          <span class="fs-4 fw-bold">{{ site.title }}</span>
+        <a href="{{ site.url }}{{ site.baseurl }}/" class="d-flex align-items-center text-decoration-none">
+            <span class="fs-2">
+            {{ if site.title }}
+                {{ site.title }}
+            {{ elseif site.first_name and site.last_name }}
+                <span class="fw-bold">{{ site.first_name }}</span>&nbsp;{{ site.last_name }}
+            {{ endif }}
+            </span>
         </a>
-        <a href="{{ site.github.url }}/" class="d-flex align-items-center text-decoration-none">
+        <a href="{{ site.url }}{{ site.baseurl }}/" class="d-flex align-items-center text-decoration-none">
           <span>{{ site.description }}</span>
         </a>
       </div>
